cppseminar/k8s/presentation-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apc-presentation
  namespace: apc
  labels:
    app: presentation
    category: frontend
spec:
  selector:
    matchLabels:
      app: presentation
  revisionHistoryLimit: 2
  replicas: 1
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: presentation
        category: frontend
    spec:
      containers:
        - name: presentation-pod
          image: 'ghcr.io/lukas-manduch/apc-presentation:0.0.7'
          ports:
            - containerPort: 80
              protocol: TCP
          resources:
            requests:
              memory: 256M
              cpu: '0.5'
            limits:
              memory: 1G
              cpu: '1'
