cppseminar/k8s/submission-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apc-submissionsservice
  namespace: apc
  labels:
    app: submissionsservice
    category: backend
spec:
  selector:
    matchLabels:
      app: submissionsservice
  revisionHistoryLimit: 2
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: submissionsservice
        category: backend
    spec:
      containers:
        - name: submissionsservice-pod
          image: 'ghcr.io/lukas-manduch/apc-submissionsservice:latest'
          imagePullPolicy: Always
          ports:
            - containerPort: 80
              protocol: TCP
          resources:
            requests:
              memory: 256M
              cpu: '0.5'
            limits:
              memory: 1G
              cpu: '1'
