cppseminar/k8s/userservice-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apc-userservice
  namespace: apc
  labels:
    app: userservice
    category: backend
spec:
  selector:
    matchLabels:
      app: userservice
  revisionHistoryLimit: 2
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: userservice
        category: backend
    spec:
      containers:
        - name: userservice-pod
          image: 'ghcr.io/lukas-manduch/apc-userservice:latest'
          imagePullPolicy: Always
          ports:
            - containerPort: 80
              protocol: TCP
          resources:
            requests:
              memory: 256M
              cpu: '0.5'
            limits:
              memory: 1G
              cpu: '1'
