cppseminar/k8s/apc-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apc-ingress
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
    appgw.ingress.kubernetes.io/ssl-redirect: "true"
  namespace: apc
  labels:
    name: apc-ingress
spec:
  tls:
    - secretName: https-certs
      hosts:
        - "apc.l33t.party"
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: presentation-service
            port:
              number: 80
    host: apc.l33t.party
